--- a/_studies/2021-07-28-10.1093-jpids-piab060.md
+++ b/_studies/2021-07-28-10.1093-jpids-piab060.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Perimyokarditis bei Jugendlichen nach Pfizer-BioNTech-Impfstoff COVID-19'
   description: 'Am 10. Mai 2021 wurde die Notfallzulassung des Impfstoffs Pfizer-BioNTech COVID-19 (BNT162b2) auf Jugendliche erweitert. … Wir beschreiben die klinischen Merkmale von 8 Jugendlichen, die sich im Laufe von 36 Tagen im Nicklaus Children’s Hospital mit Perimyokarditis innerhalb von 4 Tagen nach Erhalt einer Dosis des Impfstoffs BNT162b2 vorstellten. … Kinderärzte sollten bei der Differentialdiagnose von Patienten, die nach der Verabreichung des BNT162b2-Impfstoffs Brustschmerzen haben, eine Myokarditis in Betracht ziehen und sich der klinischen Implikationen und der Notwendigkeit bewusst sein, diese mögliche Nebenwirkung zu melden. Derzeit ist der Zusammenhang zwischen Perimyokarditis und dem BNT162b2-Impfstoff nicht bewiesen, aber neuere Berichte deuten darauf hin, dass eine Kausalität bestehen könnte. Diese Fallserie wirft zusätzliche Fragen hinsichtlich geeigneter Empfehlungen für die COVID-19-Impfung bei Jugendlichen mit einer Perimyokarditis in der Vorgeschichte, einer SARS-CoV-2-Infektion (klinisch oder serologisch) und einem mit SARS-CoV-2 assoziierten multisystemischen Entzündungssyndrom (MIS-C) auf. Es stellt sich auch die Frage, ob Patienten, bei denen nach der BNT162b2-Impfung eine Perimyokarditis auftritt, in Zukunft eine Auffrischungsimpfung gegen SARS-CoV-2 erhalten sollten. Unsere Fallserie zeigt, dass weitere Untersuchungen und eine engmaschige Nachbeobachtung dieser Patienten erforderlich sind, um künftige COVID-19-Impfempfehlungen für die pädiatrische Bevölkerungsgruppe abzuleiten.' 
-  tags:        [SARS-CoV-2, Perimyocarditis, BNT162b2]
+  tags:        [Perimyocarditis, BNT162b2]
 group:         'Vaccines'
 credit:        https://doi.org/10.1093/jpids/piab060
 ---
