--- a/_studies/2021-08-18-10.1101-2021.08.12.21261955 .md
+++ b/_studies/2021-08-18-10.1101-2021.08.12.21261955 .md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Herzentzündungen nach COVID-19 mRNA-Impfstoffen: Eine globale Pharmakovigilanz-Analyse'
   description: 'Die Omicron-SARS-CoV-2-Variante enthält 34 Mutationen im Spike-Gen, die wahrscheinlich die Schutzwirkung von Impfstoffen beeinträchtigen. Wir haben die möglichen Auswirkungen dieser Mutationen auf die zelluläre Immunantwort untersucht. Durch die Kombination von Epitopzuordnungen zu SARS-CoV-2-Impfstoffen, die wir in früheren Experimenten ermittelt haben, mit der Sequenzierung des T-Zell-Rezeptor-Repertoires (TCR) von Tausenden geimpften oder natürlich infizierten Personen, schätzen wir die Aufhebung der zellulären Immunantwort bei Omicron ab. Obwohl 20 % der CD4+ T-Zell-Epitope potenziell betroffen sind, wird der Verlust der durch CD4+ T-Zellen vermittelten Immunität auf etwas über 30 % geschätzt, da einige der betroffenen Epitope relativ immunogener sind. Für CD8+ T-Zellen schätzen wir einen Verlust von etwa 20 %. Diese Verringerung der T-Zell-Immunität ist wesentlich größer als bei anderen weit verbreiteten Varianten. In Verbindung mit dem erwarteten erheblichen Verlust der Neutralisierung durch Antikörper könnte der Gesamtschutz durch SARS-CoV-2-Impfstoffe negativ beeinflusst werden. Aus der Analyse früherer Varianten geht hervor, dass die Wirksamkeit von Impfstoffen gegen symptomatische Infektionen weitgehend erhalten bleibt und stark mit der T-Zell-Antwort, aber weniger stark mit der neutralisierenden Antikörperantwort korreliert ist. Wir gehen davon aus, dass die verbleibenden 70 % bis 80 % der durch die SARS-CoV-2-Impfung induzierten On-Target-T-Zellen die Morbidität und Mortalität bei einer Infektion mit Omicron verringern werden.' 
-  tags:        [SARS-CoV-2, Herzentzündung, mRNA-Impfstoffe]
+  tags:        [Herzentzündung, mRNA-Impfstoffe]
 group:         'Vaccines'
 credit:        https://doi.org/10.1101/2021.08.12.21261955
 ---
