--- a/_studies/2021-08-25-10.1161-CIRCIMAGING.121.013236.md
+++ b/_studies/2021-08-25-10.1161-CIRCIMAGING.121.013236.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Myokarditis im Zusammenhang mit der COVID-19-Impfung'
   description: 'Der weltweite Kampf gegen die Coronavirus-Pandemie 2019 (COVID-19) ist in die Phase der Massenimpfung eingetreten. Israel hatte einen frühen Start1 und ≈90 % der erwachsenen Bevölkerung erhielten den BioNTech COVID-19-Impfstoff (Pfizer). Die frühe Impfphase betraf die ältere Bevölkerung, doch am 26. Januar wurde die Mindestaltersgrenze auf ≥16 Jahre gesenkt. Kurz darauf, zwischen Februar und April 2021, wurde eine Gruppe von 8 Patienten mit Verdacht auf Myokarditis in unserer örtlichen Notaufnahme vorstellig, nachdem sie die zweite Dosis des Impfstoffs BioNTech COVID-19 (Pfizer) erhalten hatten. Die Studie wurde von unserem Institutional Review Board genehmigt. Die Daten, die die Ergebnisse dieser Studie untermauern, sind auf begründete Anfrage beim entsprechenden Autor erhältlich. … Frühere Berichte deuteten auf einen möglichen Zusammenhang zwischen dem COVID-19-Impfstoff und Myokarditis hin. Wir stellen eine Gruppe mit nahezu identischen klinischen, labortechnischen und bildgebenden Befunden vor, die zeitlich eindeutig mit dem Datum der zweiten BioNTech-Impfung zusammenhängen. Dennoch gibt es in der Geschichte keinen Präzedenzfall für diese Massenimpfung, und eine zufällige Häufung von Myokarditis ohne Zusammenhang kann nicht ausgeschlossen werden. Schließlich deuten unsere Ergebnisse darauf hin, dass trotz dieser potenziellen impfstoffbedingten Komplikation die meisten Patienten einen gutartigen Krankheitsverlauf und hohe Heilungsraten aufweisen werden.' 
-  tags:        [SARS-CoV-2, Myocarditis]
+  tags:        [Myocarditis]
 group:         'Vaccines'
 credit:        https://doi.org/10.1161/CIRCIMAGING.121.013236
 ---
