--- a/_studies/2021-09-01-10.3390-pediatric13030061.md
+++ b/_studies/2021-09-01-10.3390-pediatric13030061.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'COVID 19-Impfstoff für Jugendliche. Besorgnis über Myokarditis und Perikarditis '
   description: 'Kürzlich wurde auf das alarmierende Auftreten einiger Fälle von Myokarditis und Perikarditis nach der Verabreichung von mRNA-basierten Impfstoffen von Pfizer-BioNTech und Moderna COVID-19 bei männlichen Jugendlichen hingewiesen. Alle Fälle traten nach der zweiten Dosis des Impfstoffs auf. Glücklicherweise befand sich keiner der Patienten in einem kritischen Zustand, und alle konnten nach Hause entlassen werden. Aufgrund des möglichen Zusammenhangs zwischen diesen Fällen und der Verabreichung des Impfstoffs haben die amerikanischen und europäischen Gesundheitsbehörden beschlossen, den möglichen kausalen Zusammenhang zwischen COVID-19-mRNA-Impfstoffen und Myokarditis weiter zu untersuchen. In jedem Fall erfüllte keiner der Patienten die Kriterien für ein Multisystem-Entzündungssyndrom oder eine Kawasaki-Erkrankung, und es gab keine Hinweise auf eine akute SARS-CoV-2-Infektion.' 
-  tags:        [SARS-CoV-2, Myokarditis, Pericarditis, BNT162b2, mRNA-1273]
+  tags:        [Myokarditis, Pericarditis, BNT162b2, mRNA-1273]
 group:         'Vaccines'
 credit:        https://doi.org/10.3390/pediatric13030061
 ---
