--- a/_studies/2021-09-13-10.1016-S0140-6736(21)02046-8.md
+++ b/_studies/2021-09-13-10.1016-S0140-6736(21)02046-8.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Standpunkt: Überlegungen zur Verstärkung der Immunantwort auf den COVID-19-Impfstoff'
   description: 'Eine neue Welle von COVID-19-Fällen, die durch die hochgradig übertragbare Delta-Variante verursacht werden, verschärft die weltweite Krise der öffentlichen Gesundheit und hat zu Überlegungen über die mögliche Notwendigkeit und den optimalen Zeitpunkt von Auffrischungsimpfungen für geimpfte Bevölkerungsgruppen geführt. Obwohl der Gedanke, die Zahl der COVID-19-Fälle durch eine Verstärkung der Immunität bei geimpften Personen weiter zu verringern, verlockend ist, sollte jede Entscheidung in dieser Richtung auf Fakten beruhen und die Vorteile und Risiken für den Einzelnen und die Gesellschaft berücksichtigen. COVID-19-Impfstoffe sind nach wie vor wirksam gegen schwere Erkrankungen, auch gegen die durch die Delta-Variante verursachte. Die meisten Beobachtungsstudien, auf die sich diese Schlussfolgerung stützt, sind jedoch vorläufig und aufgrund möglicher Verwechslungen und selektiver Berichterstattung schwer genau zu interpretieren. Eine sorgfältige und öffentliche Prüfung der sich entwickelnden Daten ist erforderlich, um sicherzustellen, dass Entscheidungen über das Boosting eher auf zuverlässigen wissenschaftlichen Erkenntnissen als auf politischen Erwägungen beruhen. Selbst wenn die Auffrischungsimpfung nachweislich das mittelfristige Risiko einer schweren Erkrankung verringert, könnten die derzeitigen Impfstoffvorräte mehr Leben retten, wenn sie in zuvor ungeimpften Bevölkerungsgruppen eingesetzt werden, als wenn sie als Auffrischungsimpfung in geimpften Bevölkerungsgruppen verwendet werden. … Die derzeit verfügbaren Impfstoffe sind sicher, wirksam und retten Leben. Der begrenzte Vorrat an diesen Impfstoffen wird am meisten Leben retten, wenn er Menschen zur Verfügung gestellt wird, die ein nennenswertes Risiko für eine schwere Krankheit haben und noch keinen Impfstoff erhalten haben. Selbst wenn ein gewisser Nutzen aus der Auffrischung gezogen werden kann, überwiegt dieser nicht die Vorteile eines Erstschutzes für die Ungeimpften. Wenn die Impfstoffe dort eingesetzt werden, wo sie den größten Nutzen bringen, könnten sie das Ende der Pandemie beschleunigen, indem sie die weitere Entwicklung von Varianten verhindern. In der Tat hat die WHO ein Moratorium für die Auffrischungsimpfung gefordert, bis die Vorteile der Erstimpfung mehr Menschen auf der ganzen Welt zugänglich gemacht wurden. Dies ist ein zwingendes Anliegen, zumal die derzeit verfügbaren Erkenntnisse nicht belegen, dass eine Auffrischungsimpfung in Bevölkerungsgruppen, die eine wirksame Erstimpfung erhalten haben, in großem Umfang erforderlich ist.' 
-  tags:        [SARS-CoV-2]
+  tags:        []
 group:         'Vaccines'
 credit:        https://doi.org/10.1016/S0140-6736(21)02046-8
 ---
