--- a/_studies/2021-10-08-10.1016-j.vaccine.2021.09.004.md
+++ b/_studies/2021-10-08-10.1016-j.vaccine.2021.09.004.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Myokarditis nach COVID-19-Impfung - Eine Fallserie'
   description: 'Höhepunkte: • 7 Fälle von Myokarditis mit Symptomen in der ersten Woche nach der zweiten Dosis des Impfstoffs COVID-19 von Pfizer-BioNTech. • Die Inzidenz der Myokarditis in der Woche nach der zweiten Dosis des Impfstoffs betrug 5,07/100.000 in der Zeit der Nachbeobachtung, aber aufgrund der Art dieses Berichts konnte keine Kausalität festgestellt werden. • Kliniker sollten sich der Möglichkeit einer Myokarditis nach der COVID-19-Impfung von Pfizer-BioNTech bewusst sein. - Zusammenfassung: Es gibt Berichte über Myokarditis nach einer COVID-19-Impfung. Wir untersuchten alle hospitalisierten Militärangehörigen der Isareli Defense Forces während des Zeitraums der COVID-19-Impfaktion (28.12.2021-3.7.2021) auf diagnostizierte Myokarditis. Es wurden 7 Fälle von Myokarditis festgestellt, deren Symptome in der ersten Woche nach der zweiten Dosis des Impfstoffs COVID-19 Pfizer-BioNTech begannen. Ein Fall von Myokarditis, der 10 Tage nach der zweiten Dosis des Impfstoffs diagnostiziert wurde, wurde nicht berücksichtigt. Diese 8 Fälle umfassen alle Fälle von Myokarditis, die bei Militärangehörigen in diesem Zeitraum diagnostiziert wurden. Alle Patienten waren jung und im Allgemeinen gesund. Alle hatten einen milden Krankheitsverlauf ohne Folgeschäden. Die Inzidenz der Myokarditis in der Woche nach einer zweiten Impfdosis betrug 5,07/100.000 Geimpfte. Aufgrund des Charakters dieses Berichts konnte keine Kausalität festgestellt werden. Kliniker sollten sich der Möglichkeit einer Myokarditis nach einer Impfung mit Pfizer-BioNTech bewusst sein. Die tatsächlichen Inzidenzraten sollten weiter untersucht werden.' 
-  tags:        [SARS-CoV-2, Myokarditis, BNT162b2]
+  tags:        [Myokarditis, BNT162b2]
 group:         'Vaccines'
 credit:        https://doi.org/10.1016/j.vaccine.2021.09.004
 ---
