--- a/_studies/2021-10-28-10.3390-jpm11111106.md
+++ b/_studies/2021-10-28-10.3390-jpm11111106.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Myokarditis und Perikarditis nach COVID-19-Impfung: Ungleichheiten bei Alter und Impfstofftypen'
   description: 'Nach der Impfung gegen die Coronavirus-Krankheit 19 (COVID-19) bei Jugendlichen und jungen Erwachsenen wurde über eine steigende Zahl von Fällen von Myokarditis/Perikarditis berichtet. In dieser Studie sollte die Inzidenzrate und das Risiko für Myokarditis und Perikarditis nach einer COVID-19-Impfung in den Vereinigten Staaten in Abhängigkeit von Alter und Impfstofftyp untersucht werden. Für diese Studie wurde das Vaccine Adverse Events Reporting System (VAERS) vom 11. Dezember 2020 bis zum 13. August 2021 genutzt. Es wurde ein bevölkerungsbezogener Data-Mining-Ansatz auf der Grundlage des Meldequotienten (ROR) durchgeführt. Unerwünschte Ereignisse wie Myokarditis und Perikarditis nach der COVID-19-Impfung waren selten, mit einer Inzidenzrate von 5,98 (95% CI = 5,73-6,24) Fällen pro Million verabreichter Dosen. Die Inzidenzrate war bei Jugendlichen und nach der Verabreichung der zweiten Dosis von Boten-RNA-Impfstoffen (mRNA) höher. Insgesamt waren zwei mRNA-Impfstoffe signifikant mit einem erhöhten Risiko für Myokarditis/Perikarditis verbunden (mRNA-1273 (Moderna): ROR = 2,91, 95% CI = 2,21-3,83; BNT162b2 (Pfizer-BioNTech): ROR = 5,37, 95% CI = 4,10-7,04) im Vergleich zu allen anderen Impfstoffen aus VAERS. Der virale Vektorimpfstoff Ad26.COV2.S (Janssen) wurde nicht mit Signalen von Myokarditis/Perikarditis in Verbindung gebracht (ROR = 1,39; 95% CI = 0,99-1,97). Diese Studie ergab ein erhöhtes Risiko für Myokarditis/Perikarditis nach mRNA-COVID-19-Impfstoffen. Für Patienten mit einem hohen Myokarditis-/Perikarditis-Risiko oder mit Myokardverletzungen könnte der virale Vektorimpfstoff eine in Betracht zu ziehende Alternative darstellen.' 
-  tags:        [SARS-CoV-2, Myokarditis, Pericarditis, BNT162b2, mRNA-1273, Ad26.COV2.S]
+  tags:        [Myokarditis, Pericarditis, BNT162b2, mRNA-1273, Ad26.COV2.S]
 group:         'Vaccines'
 credit:        https://doi.org/10.3390/jpm11111106
 ---
