--- a/_studies/2021-10-29-10.1016-S0140-6736(21)02388-6.md
+++ b/_studies/2021-10-29-10.1016-S0140-6736(21)02388-6.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Booster scheinen wirksam zu sein, aber sind sie immer notwendig?'
   description: 'Die hohen Wirksamkeitsraten der mRNA-Impfstoffe gegen symptomatisches COVID-19, über die in klinischen Studien berichtet wurde, weckten die Hoffnung, dass sie alle durch SARS-CoV-2 verursachten Infektionen verhindern würden. Die derzeit zugelassenen Impfstoffe bieten einen hohen Schutz vor schweren Erkrankungen, verleihen aber keine Schleimhautimmunität, die das Eindringen des Virus in die Atemwege verhindert. Als aus verschiedenen Ländern überwiegend milde Durchbruchsinfektionen gemeldet wurden, kam die Sorge auf, dass Personen mit einer schnell abklingenden Immunreaktion auf den Standardimpfplan im Falle einer Infektion schwer erkranken könnten. … Die ungleiche Verteilung von Impfstoffen zwischen den Ländern ist ein weltweites Problem. Wenn sich die Praxis, allen Personen über 12 Jahren eine dritte Dosis zu verabreichen, in den impfstoffreichen Ländern durchsetzt, kann dies die Versorgungsengpässe in anderen Ländern verschärfen. In diesem Szenario könnten untergeimpfte Bevölkerungen die Voraussetzungen für das Auftreten neuer Varianten schaffen, die nicht nur infektiöser sind, sondern auch eine größere Immunflucht aufweisen, und diese Varianten könnten in impfstarke Länder eindringen und neue Infektionswellen auslösen. Das ist nicht die Art von natürlichem Experiment, die die Welt gerne sehen würde. Während die Länder ihre Verantwortung für den Schutz gefährdeter Personen in ihrer Bevölkerung wahrnehmen, müssen sie eine angemessene Versorgung anderer Länder sicherstellen. Die globale Politik muss die Risiken abwägen, die mit der Einführung von Auffrischungsimpfungen nach Belieben in der ganzen Welt in diesem Stadium der Pandemie verbunden sind.' 
-  tags:        [SARS-CoV-2, BNT162b2]
+  tags:        [BNT162b2]
 group:         'Vaccines'
 credit:        https://doi.org/10.1016/S0140-6736(21)02388-6
 ---
