--- a/_studies/2021-11-04-10.31219-osf.io-2ts54.md
+++ b/_studies/2021-11-04-10.31219-osf.io-2ts54.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Mechanismen, die die Krebsanfälligkeit bei Empfängern des COVID-19-mRNA-Impfstoffs erhöhen könnten'
   description: 'Die Impfstoffe BNT162b2 und mRNA-1273 sind weltweit in großer Zahl eingeführt worden. Selbst minimale Risikogruppen sind in vielen Ländern vollständig geimpft worden. Wir beobachten bestimmte Zusammenhänge, die zeigen, dass Krebs durch die COVID-19-mRNA-Impfung einen leichteren Weg zur Etablierung finden kann.' 
-  tags:        [SARS-CoV-2, cancer vulnerability, BNT162b2, mRNA-1273]
+  tags:        [cancer vulnerability, BNT162b2, mRNA-1273]
 group:         'Vaccines'
 credit:        https://doi.org/10.31219/osf.io/2ts54
 ---
