--- a/_studies/2021-11-23-10.1007-s00392-021-01974-0.md
+++ b/_studies/2021-11-23-10.1007-s00392-021-01974-0.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Brief an die Herausgeber: Trends bei ambulanten kardiologischen Konsultationen wegen Verdachts auf Myokarditis nach der COVID-19-Impfung'
   description: 'In Deutschland wurde die Impfung gegen die Coronavirus-Krankheit 2019 (COVID-19) am 21. Dezember 2020 zugelassen und der erste Patient am 26. Dezember behandelt. Am 7. Mai 2021 kündigte die Europäische Arzneimittelagentur (EMA) eine offizielle Untersuchung von Fallberichten über Myoperikarditis im zeitlichen Zusammenhang mit der COVID-19-Impfung an, die am 11. Juni aktualisiert wurde. Seitdem haben wir vermehrt Anfragen von Allgemeinärzten nach einer dringenden kardiologischen Konsultation von Patienten mit Verdacht auf Myokarditis nach der COVID-19-Impfung erhalten. Alle Patienten erhielten innerhalb der folgenden zwei Arbeitstage einen Termin und wurden einer standardisierten kardiologischen Untersuchung unterzogen, einschließlich Elektrokardiographie (EKG), Echokardiographie und Bestimmung von NT-proBNP und hochempfindlichem Troponin T. Eine kardiale Magnetresonanztomographie (CMR) wurde nach dem Ermessen des behandelnden Kardiologen durchgeführt. Die statistische Analyse wurde mit IBM SPSS Statistics 27.0 durchgeführt. Kontinuierliche Variablen werden als Mittelwert und 95 % Konfidenzintervall [CI] dargestellt, kategorische Variablen als Häufigkeiten und Prozentsätze. Die Vergleiche wurden mit dem Student’s t-Test und mit dem Chi-Quadrat-Test für kategoriale Variablen durchgeführt. Ein zweiseitiger p-Wert von ≤ 0,05 wurde als statistisch signifikant angesehen.' 
-  tags:        [SARS-CoV-2, Myocarditis]
+  tags:        [Myocarditis]
 group:         'Vaccines'
 credit:        https://doi.org/10.1007/s00392-021-01974-0
 ---
