--- a/_studies/2022-01-01-research-gate_356962821.md
+++ b/_studies/2022-01-01-research-gate_356962821.md
@@ -9,8 +9,8 @@ en:
   tags:        [COVID-19, SARS-CoV-2, ivermectin, prophylaxis, prevention, coronavirus]
 de:
   subtitle:    'Ivermectin-Prophylaxe bei COVID-19 reduziert die COVID-19-Infektions- und Sterblichkeitsrate: Eine stadtweite, prospektive Beobachtungsstudie an 223.128 Probanden unter Verwendung von Propensity Score Matching'
-  description: 'Aktualisiertes Manuskript: Am 8. Januar 2022 veröffentlichten wir eine aktualisierte Version unseres Manuskripts mit einigen Korrekturen. Die wichtigste Korrektur betraf die Analyse der COVID-19-Infektionsraten unter Ivermectin-Anwendern und Nicht-Anwendern. Die beiden Datensätze, die für die vorliegende Analyse verwendet wurden, wurden von unabhängiger Seite analysiert. Die detaillierte Beschreibung der Verwendung der verwendeten Daten ist in Abbildung 1 des Hauptmanuskripts dargestellt. Am gleichen Tag haben wir auch die Beilage Anhang 1 aktualisiert. Die Änderungen sind zur besseren Veranschaulichung fett hervorgehoben. || Zusammenfassung. Hintergrund: Ivermectin hat verschiedene Wirkmechanismen gezeigt, die potenziell sowohl vor einer COVID-19-Infektion als auch vor COVID-19-bedingten Komorbiditäten schützen können. Auf der Grundlage von Studien, die auf eine wirksame Prophylaxe hindeuten, und des bekannten Sicherheitsprofils von Ivermectin wurde in Itajai, einer Stadt im Süden Brasiliens im Bundesstaat Santa Catarina, ein stadtweites Präventionsprogramm mit Ivermectin gegen COVID-19 durchgeführt. Ziel dieser Studie war es, die Auswirkungen der regelmäßigen Anwendung von Ivermectin auf die nachfolgenden COVID-19-Infektions- und Sterblichkeitsraten zu bewerten. Materialien und Methoden: Wir analysierten Daten aus einer prospektiven Beobachtungsstudie zum stadtweiten COVID-19-Präventionsprogramm mit Ivermectin, das zwischen Juli 2020 und Dezember 2020 in Itajaí, Brasilien, durchgeführt wurde. Das Studiendesign, die Genehmigung des institutionellen Prüfungsausschusses und die Analyse der Registerdaten erfolgten nach Abschluss des Programms. Im Rahmen des Programms wurde die gesamte Bevölkerung von Itajaí zu einem Arztbesuch eingeladen, um sich für das Programm anzumelden und die Ausgangsdaten sowie persönliche, demografische und medizinische Informationen zu erheben. Wenn keine Kontraindikationen vorlagen, wurde Ivermectin als optionale Behandlung angeboten, die an zwei aufeinander folgenden Tagen alle 15 Tage in einer Dosis von 0,2 mg/kg/Tag eingenommen werden sollte. In Fällen, in denen ein teilnehmender Bürger aus Itajai an COVID-19 erkrankte, wurde ihm empfohlen, weder Ivermectin noch andere Medikamente in der frühen ambulanten Behandlung zu verwenden. Die klinischen Ergebnisse von Infektionen, Krankenhausaufenthalten und Todesfällen wurden automatisch gemeldet und in Echtzeit in das Register eingegeben. Die Analyse der Studie bestand im Vergleich zwischen Ivermectin-Anwendern und Nicht-Anwendern anhand von Kohorten infizierter Patienten, die nach Alter, Geschlecht und Komorbiditäten nach dem Propensity-Score (PSM) abgeglichen wurden. Die COVID-19-Infektions- und Sterblichkeitsraten wurden mit und ohne Verwendung des Propensity-Score-Matching analysiert. Ergebnisse: Von den 223.128 Einwohnern von Itajaí, die für die Studie in Frage kamen, wurden insgesamt 159.561 Personen in die Analyse einbezogen: 113.845 (71,3 %) regelmäßige Ivermectin-Anwender und 45.716 (23,3 %) Nichtanwender. Davon waren 4.311 Ivermectin-Anwender infiziert, darunter 4.194 aus der Stadt Itajaí (3,7 % Infektionsrate) und 3.034 Nicht-Anwender (aus Itajaí) (6,6 % Infektionsrate), was einer Verringerung der COVID-19-Infektionsrate um 44 % entspricht (Risikoverhältnis (RR), 0,56; 95 % Konfidenzintervall (95%CI), 0,53 - 0,58; p < 0,0001). Mithilfe des PSM wurden zwei Kohorten von 3 034 Personen mit COVID-19-Infektion verglichen. Die regelmäßige Einnahme von Ivermectin führte zu einem Rückgang der COVID-19-Mortalität um 68 % [25 (0,8 %) gegenüber 79 (2,6 %) bei den Ivermectin-Nichtanwendern; Risikoverhältnis (RR), 0,32; 95 % Konfidenzintervall (CI), 0,20 - 0,49; p < 0,0001]. Bereinigt um die übrigen Variablen betrug die Verringerung der Sterblichkeitsrate 70 % (RR, 0,30; 95%CI 0,19 - 0,46; p < 0,0001). Die Hospitalisierungsrate wurde um 56 % gesenkt (44 gegenüber 99 Hospitalisierungen bei Ivermectin-Anwendern bzw. Nicht-Anwendern; RR, 0,44; 95%CI, 0,31 - 0,63; p < 0,0001). Nach Anpassung für die restlichen Variablen betrug die Verringerung der Hospitalisierungsrate 67 % (RR, 0,33; 95%CI 023 - 0,66; p < 0,0001). Schlussfolgerung: In dieser großen, mit dem Propensity Score abgeglichenen Studie war die regelmäßige Anwendung von Ivermectin als prophylaktisches Mittel mit einer signifikant geringeren COVID-19-Infektions-, Hospitalisierungs- und Mortalitätsrate verbunden.'
-  tags:        [SARS-CoV-2, Ivermectin, Prophylaxe, Prävention, Coronavirus]
+  description: 'Aktualisiertes Manuskript: Am 8. Januar 2022 veröffentlichten wir eine aktualisierte Version unseres Manuskripts mit einigen Korrekturen. Die wichtigste Korrektur betraf die Analyse der COVID-19-Infektionsraten unter Ivermectin-Anwendern und Nicht-Anwendern. Die beiden Datensätze, die für die vorliegende Analyse verwendet wurden, wurden von unabhängiger Seite analysiert. Die detaillierte Beschreibung der Verwendung der verwendeten Daten ist in Abbildung 1 des Hauptmanuskripts dargestellt. Am gleichen Tag haben wir auch die Beilage Anhang 1 aktualisiert. Die Änderungen sind zur besseren Veranschaulichung fett hervorgehoben. || Zusammenfassung. Hintergrund: Ivermectin hat verschiedene Wirkmechanismen gezeigt, die potenziell sowohl vor einer COVID-19-Infektion als auch vor COVID-19-bedingten Komorbiditäten schützen können. Auf der Grundlage von Studien, die auf eine wirksame Prophylaxe hindeuten, und des bekannten Sicherheitsprofils von Ivermectin wurde in Itajai, einer Stadt im Süden Brasiliens im Bundesstaat Santa Catarina, ein stadtweites Präventionsprogramm mit Ivermectin gegen COVID-19 durchgeführt. Ziel dieser Studie war es, die Auswirkungen der regelmäßigen Anwendung von Ivermectin auf die nachfolgenden COVID-19-Infektions- und Sterblichkeitsraten zu bewerten. Materialien und Methoden: Wir analysierten Daten aus einer prospektiven Beobachtungsstudie zum stadtweiten COVID-19-Präventionsprogramm mit Ivermectin, das zwischen Juli 2020 und Dezember 2020 in Itajaí, Brasilien, durchgeführt wurde. Das Studiendesign, die Genehmigung des institutionellen Prüfungsausschusses und die Analyse der Registerdaten erfolgten nach Abschluss des Programms. Im Rahmen des Programms wurde die gesamte Bevölkerung von Itajaí zu einem Arztbesuch eingeladen, um sich für das Programm anzumelden und die Ausgangsdaten sowie persönliche, demografische und medizinische Informationen zu erheben. Wenn keine Kontraindikationen vorlagen, wurde Ivermectin als optionale Behandlung angeboten, die an zwei aufeinander folgenden Tagen alle 15 Tage in einer Dosis von 0,2 mg/kg/Tag eingenommen werden sollte. In Fällen, in denen ein teilnehmender Bürger aus Itajai an COVID-19 erkrankte, wurde ihm empfohlen, weder Ivermectin noch andere Medikamente in der frühen ambulanten Behandlung zu verwenden. Die klinischen Ergebnisse von Infektionen, Krankenhausaufenthalten und Todesfällen wurden automatisch gemeldet und in Echtzeit in das Register eingegeben. Die Analyse der Studie bestand im Vergleich zwischen Ivermectin-Anwendern und Nicht-Anwendern anhand von Kohorten infizierter Patienten, die nach Alter, Geschlecht und Komorbiditäten nach dem Propensity-Score (PSM) abgeglichen wurden. Die COVID-19-Infektions- und Sterblichkeitsraten wurden mit und ohne Verwendung des Propensity-Score-Matching analysiert. Ergebnisse: Von den 223.128 Einwohnern von Itajaí, die für die Studie in Frage kamen, wurden insgesamt 159.561 Personen in die Analyse einbezogen: 113.845 (71,3 %) regelmäßige Ivermectin-Anwender und 45.716 (23,3 %) Nichtanwender. Davon waren 4.311 Ivermectin-Anwender infiziert, darunter 4.194 aus der Stadt Itajaí (3,7 % Infektionsrate) und 3.034 Nicht-Anwender (aus Itajaí) (6,6 % Infektionsrate), was einer Verringerung der COVID-19-Infektionsrate um 44 % entspricht (Risikoverhältnis (RR), 0,56; 95 % Konfidenzintervall (95%CI), 0,53 - 0,58; p < 0,0001). Mithilfe des PSM wurden zwei Kohorten von 3 034 Personen mit COVID-19-Infektion verglichen. Die regelmäßige Einnahme von Ivermectin führte zu einem Rückgang der COVID-19-Mortalität um 68 % [25 (0,8 %) gegenüber 79 (2,6 %) bei den Ivermectin-Nichtanwendern; Risikoverhältnis (RR), 0,32; 95 % Konfidenzintervall (CI), 0,20 - 0,49; p < 0,0001]. Bereinigt um die übrigen Variablen betrug die Verringerung der Sterblichkeitsrate 70 % (RR, 0,30; 95%CI 0,19 - 0,46; p < 0,0001). Die Hospitalisierungsrate wurde um 56 % gesenkt (44 gegenüber 99 Hospitalisierungen bei Ivermectin-Anwendern bzw. Nicht-Anwendern; RR, 0,44; 95%CI, 0,31 - 0,63; p < 0,0001). Nach Anpassung für die restlichen Variablen betrug die Verringerung der Hospitalisierungsrate 67 % (RR, 0,33; 95%CI 023 - 0,66; p < 0,0001). Schlussfolgerung: In dieser großen, mit dem Propensity Score abgeglichenen Studie war die regelmäßige Anwendung von Ivermectin als prophylaktisches Mittel mit einer signifikant geringeren COVID-19-Infektions-, Hospitalisierungs- und Mortalitätsrate verbunden.' 
+  tags:        [Ivermectin, Prophylaxe, Prävention, Coronavirus]
 group:         'Treatments'
 credit:        https://www.researchgate.net/publication/356962821_Ivermectin_Prophylaxis_Used_for_COVID-19_Reduces_COVID-19_Infection_and_Mortality_Rates_A_City-Wide_Prospective_Observational_Study_of_223128_Subjects_Using_Propensity_Score_Matching
 ---
