--- a/_studies/2022-01-25-10.1001-jama.2021.24110.md
+++ b/_studies/2022-01-25-10.1001-jama.2021.24110.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Gemeldete Myokarditis-Fälle nach mRNA-basierter COVID-19-Impfung in den USA von Dezember 2020 bis August 2021'
   description: 'Frage: Wie hoch ist das Risiko einer Myokarditis nach einer mRNA-basierten COVID-19-Impfung in den USA? - Ergebnisse: In dieser deskriptiven Studie mit 1626 Myokarditisfällen in einem nationalen passiven Meldesystem überstiegen die rohen Melderaten innerhalb von 7 Tagen nach der Impfung die erwarteten Raten in mehreren Alters- und Geschlechtsschichten. Die Raten der Myokarditisfälle waren nach der zweiten Impfdosis am höchsten bei männlichen Jugendlichen im Alter von 12 bis 15 Jahren (70,7 pro Million Dosen des BNT162b2-Impfstoffs), bei männlichen Jugendlichen im Alter von 16 bis 17 Jahren (105,9 pro Million Dosen des BNT162b2-Impfstoffs) und bei jungen Männern im Alter von 18 bis 24 Jahren (52,4 und 56,3 pro Million Dosen des BNT162b2-Impfstoffs bzw. des mRNA-1273-Impfstoffs). - Bedeutung:  Auf der Grundlage der Meldungen der passiven Überwachung in den USA war das Risiko einer Myokarditis nach der Verabreichung von COVID-19-Impfstoffen auf mRNA-Basis über mehrere Alters- und Geschlechtsschichten hinweg erhöht und war nach der zweiten Impfdosis bei männlichen Jugendlichen und jungen Männern am höchsten.' 
-  tags:        [SARS-CoV-2, Myocarditis, BNT162b2, mRNA-1273]
+  tags:        [Myocarditis, BNT162b2, mRNA-1273]
 group:         'Vaccines'
 credit:        https://doi.org/10.1001/jama.2021.24110
 ---
