--- a/_studies/2022-02-25-10.1001-jamapediatrics.2022.0101.md
+++ b/_studies/2022-02-25-10.1001-jamapediatrics.2022.0101.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Forschungsbrief: Myokarditis nach COVID-19 BNT162b2-Impfung bei Jugendlichen in Hongkong'
   description: 'Weltweit häufen sich Fälle von Myokarditis nach der zweiten Dosis des Boten-RNA-Impfstoffs (mRNA), insbesondere bei jüngeren männlichen Erwachsenen und Jugendlichen. In Abwägung des Risikos einer Myokarditis gegenüber dem Nutzen der Verhinderung einer schweren COVID-19-Erkrankung haben Norwegen, das Vereinigte Königreich und Taiwan die zweite Dosis des mRNA-Impfstoffs für Jugendliche ausgesetzt. Ebenso wird Jugendlichen (im Alter von 12 bis 17 Jahren) in Hongkong seit dem 15. September 2021 empfohlen, eine Dosis BNT162b2 anstelle von zwei Dosen im Abstand von 21 Tagen zu erhalten.' 
-  tags:        [SARS-CoV-2, Myokarditis, BNT162b2]
+  tags:        [Myokarditis, BNT162b2]
 group:         'Vaccines'
 credit:        https://doi.org/10.1001/jamapediatrics.2022.0101
 ---
