--- a/_studies/2022-03-01-10.4049-jimmunol.2100990.md
+++ b/_studies/2022-03-01-10.4049-jimmunol.2100990.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Cutting Edge: Serum-, aber nicht Schleimhaut-Antikörper-Reaktionen sind mit bereits vorhandenen SARS-CoV-2-Spikes kreuzreaktiven CD4+ T-Zellen nach BNT162b2-Impfung bei älteren Menschen assoziiert'
   description: 'Fortgeschrittenes Alter ist ein Hauptrisikofaktor für schwere COVID-19. Allerdings wurde in dieser Altersgruppe über eine geringe Wirksamkeit der Impfung und ein schnelleres Abklingen der Immunität berichtet. Um altersbedingte Unterschiede in der Immunogenität aufzuklären, haben wir die zellulären, serologischen und speichelspezifischen SARS-CoV-2-Spike-Glykoprotein-Immunantworten auf den COVID-19-Impfstoff BNT162b2 bei alten (69-92 Jahre) und mittelalten (24-57 Jahre) Impflingen im Vergleich zu einer natürlichen Infektion (COVID-19-Rekonvaleszenten im Alter von 21-55 Jahren) untersucht. Die serologischen humoralen Reaktionen auf die Impfung übertrafen die der Rekonvaleszenten, aber das Speichel-IgA gegen die Spike-Untereinheit 1 (S1) und die Neutralisierungskapazität waren bei den Geimpften weniger dauerhaft. Bei alten Geimpften konnten wir beobachten, dass bereits vorhandene Spike-spezifische CD4+ T-Zellen mit einer effizienten Induktion von Anti-S1-IgG und Neutralisierungskapazität im Serum, nicht aber im Speichel verbunden sind. Unsere Ergebnisse deuten darauf hin, dass bereits vorhandene kreuzreaktive CD4+ T-Zellen gegen SARS-CoV-2 eine effiziente, durch den COVID-19-Impfstoff induzierte humorale Immunantwort bei alten Menschen vorhersagen können.' 
-  tags:        [SARS-CoV-2, BNT162b2, CD4+ T cells]
+  tags:        [BNT162b2, CD4+ T cells]
 group:         'Vaccines'
 credit:        https://doi.org/10.4049/jimmunol.2100990
 ---
