--- a/_studies/2022-03-02-10.1056-NEJMoa2119451.md
+++ b/_studies/2022-03-02-10.1056-NEJMoa2119451.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Wirksamkeit des Covid-19-Impfstoffs gegen die Omicron (B.1.1.529)-Variante'
   description: 'Hintergrund: Ein rapider Anstieg der Fälle von Coronavirus-Krankheit 2019 (Covid-19) aufgrund der Omicron-Variante (B.1.1.529) des schweren akuten respiratorischen Syndroms Coronavirus 2 in stark geimpften Bevölkerungsgruppen hat Bedenken hinsichtlich der Wirksamkeit der derzeitigen Impfstoffe geweckt. - Schlussfolgerungen: Die Grundimmunisierung mit zwei Dosen des Impfstoffs ChAdOx1 nCoV-19 oder BNT162b2 bot einen begrenzten Schutz gegen symptomatische Erkrankungen, die durch die Omicron-Variante verursacht wurden. Eine Auffrischungsimpfung mit BNT162b2 oder mRNA-1273 nach der primären Impfung mit ChAdOx1 nCoV-19 oder BNT162b2 erhöhte den Schutz beträchtlich, aber dieser Schutz nahm mit der Zeit ab.' 
-  tags:        [SARS-CoV-2, Omicron, B.1.1.529, BNT162b2, ChAdOx1 nCoV-19, mRNA-1273]
+  tags:        [Omicron, B.1.1.529, BNT162b2, ChAdOx1 nCoV-19, mRNA-1273]
 group:         'Vaccines'
 credit:        https://doi.org/10.1056/NEJMoa2119451
 ---
