--- a/_studies/2022-03-09-10.1111-cen.14716.md
+++ b/_studies/2022-03-09-10.1111-cen.14716.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Brief an den Herausgeber: Subakute Schilddrüsenentzündung nach COVID-19-Impfung: Fallbericht und Umfrage der Gesellschaft für Endokrinologie'
   description: 'Wir berichten über einen Fall von subakuter Schilddrüsenentzündung, die sich nach einer COVID-19-Impfung entwickelte, sowie über 17 weitere Fälle, die ebenfalls nach einer COVID-19-Impfung auftraten. … Kürzlich wurden Fallberichte und kleine Fallserien von subakuter Thyreoiditis nach einer COVID-19-Impfung beschrieben. Endokrinologen müssen sich bei der Behandlung thyreotoxischer Patienten über mögliche Impfstofffolgen im Klaren sein, einschließlich des erhöhten Risikos, dass eine Thyreotoxikose nach einer COVID-19-Impfung zu einer potenziell selbstlimitierenden subakuten Thyreoiditis führt. Es wurde auch berichtet, dass kurz nach einer COVID-19-Impfung ein Morbus Basedow auftreten kann. Angesichts der Milliarden von bisher verabreichten COVID-19-Impfstoffdosen und einer Hintergrundinzidenz der subakuten Thyreoiditis von 4,9 pro 100.000 bleibt der Vorbehalt bestehen, dass die Fälle in unserer Untersuchung zufällig aufgetreten sein könnten. Allerdings wurden die SARS-CoV-2-Impfstoffe unter Notfallbedingungen entwickelt, und die ursprünglichen klinischen Studien bestanden ausnahmsweise aus den gleichzeitigen Phasen 1, 2 und 3. Außerdem wurde den Personen in den Placebo-Armen der Studien der Impfstoff angeboten, so dass es keine randomisierten Kontrollgruppen gibt. Eine systematische Überwachung der Allgemeinbevölkerung hat nicht stattgefunden, so dass mögliche Nebenwirkungen übersehen worden sein könnten. Kliniker, die andere Krankheiten als COVID-19 behandeln, dokumentieren in der Regel nicht die COVID-19-Impfgeschichte. Daher kann ein möglicher Zusammenhang leicht übersehen und die Nebenwirkungen unterschätzt werden.' 
-  tags:        [SARS-CoV-2, Subakute Thyreoiditis]
+  tags:        [Subakute Thyreoiditis]
 group:         'Vaccines'
 credit:        https://doi.org/10.1111/cen.14716
 ---
