--- a/_studies/2022-03-22-10.21542-gcsp.2021.18.md
+++ b/_studies/2022-03-22-10.21542-gcsp.2021.18.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Myokarditis und Perikarditis im Zusammenhang mit der COVID-19 mRNA-Impfung: Fälle aus einem regionalen Pharmakovigilanzzentrum'
   description: 'In diesem Artikel fassen wir mutmaßliche unerwünschte Ereignisse nach der Impfung (AEFI) von Perikarditis, Myokarditis und Perimyokarditis zusammen, die von unserem regionalen Pharmakovigilanzzentrum nach der COVID-19-mRNA-Impfung gemeldet wurden, und erörtern ihren Zusammenhang mit diesen Impfstoffen. Zwischen März und Juli 2021 wurden siebzehn Fälle gemeldet. Davon hatten neun eine Perimyokarditis, fünf eine Myokarditis und drei eine Perikarditis. Zwölf Patienten waren männlich (71 %). Das mittlere Alter betrug 38 Jahre (Spanne 17 - 88). Das am häufigsten beobachtete Symptom waren akute Brustschmerzen (65 %). Während 47 % der Patienten zuvor gesund waren, wiesen 53 % mindestens eine vorbestehende Komorbidität auf, wobei Bluthochdruck die häufigste war (24 %). Die Diagnosekriterien der Europäischen Gesellschaft für Kardiologie für die gemeldeten AEFIs wurden in zwölf Fällen (71 %) erfüllt. Die AEFIs traten in sechs Fällen (35 %) nach der ersten Impfstoffdosis, in zehn Fällen (59 %) nach der zweiten Impfstoffdosis und in einem Fall (6 %) nach beiden Dosen auf. Die mediane Latenzzeit aller AEFIs zusammengenommen betrug 14 Tage (Spanne 1 - 28) nach der ersten Impfung und 3 Tage (Spanne 1 - 17) nach der zweiten Impfung. Mit einer Ausnahme wurden alle Patienten in ein Krankenhaus eingewiesen (94 %), mit einer mittleren Aufenthaltsdauer von 7,5 Tagen (Spanne 3 - 13). Bei der Mehrheit der Patienten (n = 11, 65 %) traten keine Komplikationen auf, und 13 (77 %) der Patienten waren zum Zeitpunkt der Entlassung wieder gesund oder erholten sich. In 16 der 17 Fälle (94 %) wurde der Zusammenhang zwischen der AEFI und der mRNA-Impfung vom Pharmakovigilanzzentrum als möglich erachtet.' 
-  tags:        [SARS-CoV-2, Myocarditis, Pericarditis]
+  tags:        [Myocarditis, Pericarditis]
 group:         'Vaccines'
 credit:        http://dx.doi.org/10.21542/gcsp.2021.18
 ---
