--- a/_studies/2021-07-20-10.1161-CIRCULATIONAHA.121.056135.md
+++ b/_studies/2021-07-20-10.1161-CIRCULATIONAHA.121.056135.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Myokarditis mit COVID-19 mRNA-Impfstoffen'
   description: 'Myokarditis ist als seltene Komplikation der mRNA-Impfung gegen die Coronavirus-Krankheit 2019 (COVID-19) bekannt, insbesondere bei jungen Erwachsenen und männlichen Jugendlichen. Nach Angaben der US-amerikanischen Centers for Disease Control and Prevention liegt die Myokarditis-/Perikarditis-Rate bei 12- bis 39-Jährigen bei ≈12,6 Fällen pro einer Million Dosen des mRNA-Zweitimpfstoffs. In den gemeldeten Fällen traten bei Patienten mit Myokarditis ausnahmslos Schmerzen in der Brust auf, in der Regel 2 bis 3 Tage nach einer zweiten Dosis der mRNA-Impfung, und sie hatten erhöhte kardiale Troponinwerte. Das EKG war in den meisten Fällen abnormal mit ST-Hebungen, und die kardiale MRT deutete bei allen untersuchten Patienten auf eine Myokarditis hin. Es gab keine Hinweise auf eine akute COVID-19-Infektion oder andere Virusinfektionen. In einem Fall war ein Kardiomyopathie-Gen-Panel negativ, aber die Autoantikörperspiegel gegen bestimmte Selbstantigene und die Häufigkeit der natürlichen Killerzellen waren erhöht. Obwohl die Mechanismen für die Entwicklung der Myokarditis nicht klar sind, wurden eine molekulare Mimikry zwischen dem Spike-Protein des schweren akuten respiratorischen Syndroms Coronavirus-2 (SARS-CoV-2) und Selbstantigenen, die Auslösung bereits bestehender dysregulierter Immunwege bei bestimmten Personen, eine Immunantwort auf mRNA und die Aktivierung immunologischer Wege sowie eine dysregulierte Zytokinexpression vorgeschlagen. Die Gründe für das Überwiegen männlicher Myokarditisfälle sind nicht bekannt, aber mögliche Erklärungen beziehen sich auf geschlechtshormonelle Unterschiede bei der Immunantwort und Myokarditis sowie auf die Unterdiagnose von Herzerkrankungen bei Frauen. Bei fast allen Patienten klangen die Symptome und Anzeichen ab und die diagnostischen Marker und die Bildgebung verbesserten sich mit oder ohne Behandlung. Trotz seltener Fälle von Myokarditis zeigt die Nutzen-Risiko-Bewertung für die COVID-19-Impfung ein günstiges Verhältnis für alle Alters- und Geschlechtsgruppen; daher wird die COVID-19-Impfung für alle Personen im Alter von ≥12 Jahren empfohlen.' 
-  tags:        [SARS-CoV-2, Myokarditis, BNT162b2]
+  tags:        [Myokarditis, BNT162b2]
 group:         'Vaccines'
 credit:        https://doi.org/10.1161/CIRCULATIONAHA.121.056135
 ---
