--- a/_studies/2021-08-10-10.1001-jamacardio.2021.3471.md
+++ b/_studies/2021-08-10-10.1001-jamacardio.2021.3471.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Assoziation von Myokarditis mit der BNT162b2-Messenger-RNA COVID-19-Impfung in einer Fallserie von Kindern'
   description: 'Frage: Welche Ergebnisse liefert die kardiale Bildgebung bei Kindern mit Myokarditis nach der COVID-19-Impfung? - Befunde: In dieser Fallserie von 15 Kindern, die nach Erhalt des BNT162b2-Messenger-RNA-COVID-19-Impfstoffs für 1 bis 5 Tage mit Myokarditis ins Krankenhaus eingeliefert wurden, waren Jungen am häufigsten nach der zweiten Impfdosis betroffen, 3 Patienten hatten eine ventrikuläre systolische Dysfunktion, und 12 Patienten hatten eine späte Gadoliniumanreicherung in der kardialen Magnetresonanztomographie. Es gab keine Sterblichkeit, und bis auf einen Patienten hatten alle bei der Nachuntersuchung 1 bis 13 Tage nach der Entlassung normale Echokardiogrammergebnisse. - Bedeutung: Die COVID-19-Impfstoff-assoziierte Myokarditis kann bei Kindern kurzfristig gutartig verlaufen; die langfristigen Risiken bleiben jedoch unbekannt.' 
-  tags:        [SARS-CoV-2, Myocarditis, BNT162b2]
+  tags:        [Myocarditis, BNT162b2]
 group:         'Vaccines'
 credit:        https://doi.org/10.1001/jamacardio.2021.3471
 ---
