--- a/_studies/2021-11-03-10.7759-cureus.19240.md
+++ b/_studies/2021-11-03-10.7759-cureus.19240.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Klinische Präsentation und Ergebnisse von Myokarditis nach mRNA-Impfung: Eine Meta-Analyse und systematische Überprüfung'
   description: 'Hintergrund: Myokarditis wird zunehmend als mögliche Komplikation der Impfstoffe von Pfizer-BioNTech und Moderna für COVID-19 gemeldet. Bis zum 02. September 2021 wurden eintausendfünfhundertzweiundzwanzig Fälle gemäß dem Meldesystem der CDC (Centers for Disease Control) für unerwünschte Ereignisse bei Impfstoffen gemeldet. Die meisten der veröffentlichten Daten liegen in Form von Fallberichten und Serien vor. Es besteht die Notwendigkeit, die demografischen Daten, die klinischen Merkmale und die Ergebnisse bei diesen Patienten zusammenzustellen. - Methoden: Es wurde eine systematische Suche in PubMed, Embase, Web of science und google scholar nach veröffentlichter Literatur zwischen dem 01. Januar 2020 und dem 17. Juli 2021 durchgeführt. Die individuellen Daten von 69 Patienten wurden aus 25 qualifizierten Fallberichten und Fallserien gepoolt. - Ergebnisse: Das mediane Alter bei Beginn der Erkrankung betrug 21 Jahre. 92,7 % der Patienten waren männlich. 76,8 % der Patienten erhielten den Impfstoff von Pfizer-BioNTech und 23,2 % den Impfstoff von Moderna. Bei 88,5 % traten die Symptome nach der zweiten Dosis auf. Die Patienten wurden im Median drei Tage nach der Impfung ins Krankenhaus eingeliefert. Alle Patienten hatten Brustschmerzen und einen erhöhten Troponinwert. Bei 87 % der Patienten wurde die Myokarditis durch eine kardiale MRT bestätigt. Die meisten Patienten hatten eine späte Gadoliniumanreicherung im MRT. Die mediane Aufenthaltsdauer betrug vier Tage. Alle gemeldeten Patienten erholten sich und konnten entlassen werden. - Schlussfolgerung: Eine Myokarditis nach einer mRNA-Impfung tritt vor allem bei jungen Männern innerhalb weniger Tage nach ihrer zweiten Impfdosis auf. Die Pathophysiologie der Myokarditis ist nicht genau bekannt. Die Prognose ist gut, da sich alle berichteten Patienten erholt haben. Das Vorhandensein einer späten Gadoliniumanreicherung auf der kardialen MRT deutet auf eine myokardiale Nekrose/Fibrose hin, und es sind weitere Studien erforderlich, um die Langzeitprognose der Erkrankung zu ermitteln.' 
-  tags:        [SARS-CoV-2, Myocarditis, BNT162b2, mRNA-1273]
+  tags:        [Myocarditis, BNT162b2, mRNA-1273]
 group:         'Vaccines'
 credit:        https://doi.org/10.7759/cureus.19240
 ---
